infrastructure/03-traefik/shared/foreign/fritz/fritz-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fritz-service
spec:
  type: ExternalName
  externalName: 192.168.178.1
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
