infrastructure/03-traefik/shared/foreign/fritz/fritz-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: fritz-ingress
  namespace: traefik
  labels:
    local: "true"
spec:
  entryPoints:
    - web
    - websecure
  routes:
  - match: Host(`fritz.steffenillium.de`)
    kind: Rule
    services:
    - name: fritz-service
      port: http
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: fritz-ingress-front
  namespace: traefik
  labels:
    expose: "true"
spec:
  entryPoints:
    - web
    - websecure
  routes:
  - match: Host(`fritz.steffenillium.de`)
    kind: Rule
    middlewares:
    - name: authentik-middleware
    services:
    - name: fritz-service
      port: http
